# oo-chat

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TESTING.md  agent.py  main.py  memory.py  next.config.ts  package-lock.json  package.json  pytest.ini  subscriptions.py  vitest.config.ts
.co/: config.toml
app/: globals.css  layout.tsx  page.tsx
automation/: __init__.py  automation.py  automation_config.json  refine_draft.py  run_automation.py  schedule_meeting.py  send_reply.py  serve_briefing.py
backend/: .coignore  LICENSE  README.md  TESTING.md  cli.py  co-vibecoding-principles-docs-contexts-all-in-one.md  main.py  memory.py  pyproject.toml  requirements.txt  tox.ini
backend/cli/: __init__.py  commands.py  contacts_provider.py  core.py  setup.py
backend/commands/: search.md  today.md  weekly_summary.md
backend/prompts/: outlook_agent.md
backend/tests/: __init__.py  test_credentials.py  test_writing_style.py
cli/: commands.py  core.py  interactive.py
commands/: events.md  inbox.md  subscriptions.md  weekly_summary.md  writing_style.md
components/: agent-header.tsx  chat-layout.tsx  confirm-dialog.tsx  qr-share.tsx  session-list.tsx  sidebar.tsx
data/: .gitkeep
docs/: ARCHITECTURE.md  DEPLOY.md
drafting/: send_draft.py
frontend/: .vercelignore  CLAUDE.md  GEMINI.md  SETTINGS_ROUTE_SUMMARY.txt  TESTING.md  package.json
hooks/: use-agent-info.ts  use-identity.ts
lib/: automation-briefing-file.ts  capstone-paths.ts  co-connect-email.ts
oo-chat/: .gitignore  AGENTS.md  UI-TEST-REPORT.md
prompts/: crm_init.md  gmail_agent.md  (+6 more)
(+146 files in other folders)
