[project]
name = "gmail-agent"
version = "0.1.0"
description = "AI-powered Gmail agent with CRM capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "connectonion>=0.4.1",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "tox>=4.0.0",
]

[tool.uv]
managed = true
